11/6/2022 Added "Item" class and "zombieAttack" function

--- a/AbodeOfTheArisenv0.0.1/AbodeOfTheArisenv0.0.1.vcxproj
+++ b/AbodeOfTheArisenv0.0.1/AbodeOfTheArisenv0.0.1.vcxproj
@@ -139,12 +139,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Room.h" />
     <ClInclude Include="Zombie.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AbodeMain.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Room.cpp" />
     <ClCompile Include="Zombie.cpp" />
