--- a/AbodeOfTheArisenv0.0.1/AbodeOfTheArisenv0.0.1.vcxproj.filters
+++ b/AbodeOfTheArisenv0.0.1/AbodeOfTheArisenv0.0.1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Room.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AbodeMain.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Room.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
